--- a/package.json
+++ b/package.json
@@ -17,25 +17,29 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~2.4.0",
-    "@angular/compiler": "~2.4.0",
-    "@angular/core": "~2.4.0",
-    "@angular/forms": "~2.4.0",
-    "@angular/http": "~2.4.0",
-    "@angular/platform-browser": "~2.4.0",
-    "@angular/platform-browser-dynamic": "~2.4.0",
+    "@angular/common": "~2.4.7",
+    "@angular/compiler": "~2.4.7",
+    "@angular/core": "~2.4.7",
+    "@angular/forms": "~2.4.7",
+    "@angular/http": "~2.4.7",
+    "@angular/platform-browser": "~2.4.7",
+    "@angular/platform-browser-dynamic": "~2.4.7",
     "@angular/router": "~3.4.0",
+    "@ng2-dynamic-forms/core": "^1.3.13",
+    "@ng2-dynamic-forms/ui-bootstrap": "^1.3.13",
     "angular-in-memory-web-api": "~0.2.4",
     "angular-star-rating": "^2.0.0-beta.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "5.1.0",
     "systemjs": "0.19.40",
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
     "lite-server": "^2.2.2",
-    "typescript": "~2.0.10",
+    "typescript": "~2.1.6",
     "canonical-path": "0.0.2",
     "http-server": "^0.9.0",
     "tslint": "^3.15.1",
