--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "~2.4.7",
-    "@angular/compiler": "~2.4.7",
-    "@angular/core": "~2.4.7",
-    "@angular/forms": "~2.4.7",
-    "@angular/http": "~2.4.7",
-    "@angular/platform-browser": "~2.4.7",
-    "@angular/platform-browser-dynamic": "~2.4.7",
-    "@angular/router": "~3.4.0",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@ng2-dynamic-forms/core": "^1.3.13",
     "@ng2-dynamic-forms/ui-bootstrap": "^1.3.13",
     "angular-in-memory-web-api": "~0.2.4",
