--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-   "angular-in-memory-web-api": "~0.2.4",
+    "angular-in-memory-web-api": "~0.2.4",
     "angular-star-rating": "^2.0.0-beta.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
@@ -36,23 +36,25 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.1.6",
+    "@agm/core": "^1.0.0-beta.0",
+    "@types/googlemaps": "^3.26.11",
+    "@types/jasmine": "^2.5.36",
+    "@types/node": "^6.0.46",
     "canonical-path": "0.0.2",
+    "concurrently": "^3.1.0",
     "http-server": "^0.9.0",
-    "tslint": "^3.15.1",
-    "lodash": "^4.16.4",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
     "protractor": "~4.0.14",
     "rimraf": "^2.5.4",
-    "@types/node": "^6.0.46",
-    "@types/jasmine": "^2.5.36"
+    "tslint": "^3.15.1",
+    "typescript": "~2.1.6"
   },
   "repository": {}
 }
