--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
+    "text-mask-addons": "^3.5.1",
+    "text-mask-core": "^5.0.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
