--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "libphonenumber": "0.0.10",
     "rxjs": "^5.1.0",
     "text-mask-addons": "^3.5.1",
     "text-mask-core": "^5.0.1",
